--- a/stop.htm
+++ b/stop.htm
@@ -191,7 +191,7 @@ stoff = new Image(302, 19); stoff.src = "data:image/gif;base64,R0lGODlhLgETAKECA
 <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body scroll="no">
-<!--iframe hidden src="midi/sirena.mp3" allow="autoplay" type="audio/mp3" width="1" height="1"></iframe-->
+<iframe hidden src="midi/sirena.mp3" allow="autoplay" type="audio/mp3" width="1" height="1"></iframe>
 <table class="main">
 <tbody>
 <tr>
