--- a/index.htm
+++ b/index.htm
@@ -268,7 +268,7 @@ else if ((value>='0' && value<='9')){if (resetblock) info.value=value,resetblock
 <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body scroll="no">
-<!--iframe hidden src="midi/enter.mp3" allow="autoplay" type="audio/mp3" width="1" height="1"></iframe-->
+<iframe hidden src="midi/enter.mp3" allow="autoplay" type="audio/mp3" width="1" height="1"></iframe>
 <table class="main">
 <tbody>
 <tr>
@@ -278,7 +278,7 @@ else if ((value>='0' && value<='9')){if (resetblock) info.value=value,resetblock
 <tr>
 <td valign="top">
 <div class="sec-m">
-<b>таймер</b> <span id="hour">00</span>:<span id="minute">00</span>:<span id="scs">0</span><span id="second">16</span>
+<b>таймер</b> <span id="hour">00</span>:<span id="minute">00</span>:<span id="scs">0</span><span id="second">18</span>
 </div>
 <div><form name="calc"><input name="info" type="text" size="28" value="" onfocus="preval=document.calc.info.value"></form></div>
 <div class="danpol">
