--- a/contact.htm
+++ b/contact.htm
@@ -330,7 +330,7 @@ x79124683606('redamn','Portfolio 2.0');//--></script></span></td>
 </tr>
 <tr>
 <td valign="bottom" class="name"><b>nick-name</b></td>
-<td class="date"><span><a class="finger" href="http://nick-name.ru/sertificates/444141/" target="_blank">444141</a></span></td>
+<td class="date"><span><a class="finger" href="https://mynickname.com/sertificates/444141/" target="_blank">444141</a></span></td>
 </tr>
 <!-- end text -->
 </tbody>
